Commiting a MVP Class development documentation

--- a/D365O_Addin_ClassDevDocumentation/Addin/AddinResources.resx
+++ b/D365O_Addin_ClassDevDocumentation/Addin/AddinResources.resx
@@ -120,7 +120,7 @@
   <data name="DesignerAddinCaption" xml:space="preserve">
     <value>Create methods XML documentation</value>
   </data>
-  <data name="JsonURL" xml:space="preserve">
-    <value>https://gist.githubusercontent.com/anderson-joyle/314a003a09e4a3836ec953f109b194e3/raw/230e64449e575aa5a8c667f799dbb8441165c761/gistfile1.txt</value>
+  <data name="XmlURL" xml:space="preserve">
+    <value>https://gist.githubusercontent.com/anderson-joyle/e49e0a4f23a30efc6c5a1a62d00d1860/raw/293ad9d2da009243f4bd710c2927390c469f64c2/gistfile1.txt</value>
   </data>
 </root>
