Pointing to correct XML file

--- a/D365O_Addin_ClassDevDocumentation/Addin/AddinResources.resx
+++ b/D365O_Addin_ClassDevDocumentation/Addin/AddinResources.resx
@@ -121,6 +121,6 @@
     <value>Create methods XML documentation</value>
   </data>
   <data name="XmlURL" xml:space="preserve">
-    <value>https://gist.githubusercontent.com/anderson-joyle/e49e0a4f23a30efc6c5a1a62d00d1860/raw/293ad9d2da009243f4bd710c2927390c469f64c2/gistfile1.txt</value>
+    <value>https://raw.githubusercontent.com/anderson-joyle/D365O-Addins/master/D365O_Addin_ClassDevDocumentation/Addin/known_data.xml</value>
   </data>
 </root>
