--- a/D365O_Addin_NewField/Addin/AddinResources.resx
+++ b/D365O_Addin_NewField/Addin/AddinResources.resx
@@ -118,7 +118,7 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="DesignerAddinCaption" xml:space="preserve">
-    <value>New field</value>
+    <value>Add field + edt</value>
   </data>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
   <data name="accept_button" type="System.Resources.ResXFileRef, System.Windows.Forms">
