Fix EDT add to project by taking into account Group by element type setting Added label and help text

--- a/D365O_Addin_NewField/Addin/Forms/FormMain.resx
+++ b/D365O_Addin_NewField/Addin/Forms/FormMain.resx
@@ -126,19 +126,25 @@
   <metadata name="toolTipFieldType.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>232, 21</value>
   </metadata>
-  <metadata name="toolTipExtends.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>927, 21</value>
-  </metadata>
   <metadata name="toolTipFieldName.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>495, 21</value>
   </metadata>
+  <metadata name="toolTipExtends.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>927, 21</value>
+  </metadata>
   <metadata name="toolTipEnum.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>374, 21</value>
+  </metadata>
+  <metadata name="toolTipFieldName.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>495, 21</value>
   </metadata>
   <metadata name="toolTipStringSize.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>643, 21</value>
   </metadata>
   <metadata name="toolTipEdtName.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>787, 21</value>
+  </metadata>
+  <metadata name="toolTipExtends.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>927, 21</value>
   </metadata>
 </root>
